--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "initial-demo",
+  "name": "next-initial-demo",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Elis Antonio Perez",
+    "email": "elisperezmusic@gmail.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,7 +18,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.16",
+    "@types/react": "^18.0.18",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "typescript": "^4.8.3"
   }
 }
